dev/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-rollout
spec:
  replicas: 5
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: "1m"
      - setWeight: 40
      - pause: {duration: 10s}
      - setWeight: 60
      - pause: {duration: 10s}
      - setWeight: 80
      - pause: {duration: 10s}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: canary-rollout
  template:
    metadata:
      labels:
        app: canary-rollout
    spec:
      containers:
      - name: canary-rollout
        image: doomnova/webapp-argocd:latest
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        #resources:
        #  requests:
        #    memory: 32Mi
        #    cpu: 5m
---
apiVersion: v1
kind: Service
metadata:
  name: canary-rollout
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: canary-rollout
