dev/webappdeployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: webapp-deployment
#   labels:
#     app: webapp
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: webapp
#   template:
#     metadata:
#       labels:
#         app: webapp
#     spec:
#       containers:
#       - name: webapp
#         image: doomnova/webapp-argocd:latest
#         ports:
#         - containerPort: 3000 # 8080
#         env:
#         - name: USER_NAME
#           valueFrom:
#             secretKeyRef:
#               name: mongo-secret
#               key: mongo-user
#         - name: USER_PWD
#           valueFrom:
#             secretKeyRef:
#               name: mongo-secret
#               key: mongo-password
#         - name: DB_URL
#           valueFrom:
#             configMapKeyRef:
#               name: mongo-config
#               key:  mongo-url

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-rollout
spec:
  replicas: 5
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: canary-rollout
        image: doomnova/webapp-argocd:latest
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30200
